# causal-worlds

./: .coverage  .editorconfig  .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  LICENSE  Makefile  README.md  RELEASING.md  pyproject.toml
.claude/: settings.json
.claude/skills/causal-worlds-conventions/: SKILL.md
.github/workflows/: ci.yml  publish.yml
benchmark/: README.md  prompts.txt
benchmark/v0.2/: index.json
benchmark/v0.2/world_00/: answer_key.json  data.npz  manifest.json  spec.json
benchmark/v0.2/world_01/: answer_key.json  data.npz  manifest.json  spec.json
benchmark/v0.2/world_02/: answer_key.json  data.npz  manifest.json  spec.json
benchmark/v0.2/world_03/: answer_key.json  data.npz  manifest.json  spec.json
benchmark/v0.2/world_04/: answer_key.json  data.npz  manifest.json  spec.json
benchmark/v0.2/world_05/: answer_key.json  data.npz  manifest.json  spec.json
benchmark/v0.2/world_06/: answer_key.json  data.npz  manifest.json  spec.json
benchmark/v0.2/world_07/: answer_key.json  data.npz  manifest.json  spec.json
benchmark/v0.2/world_08/: answer_key.json  data.npz  manifest.json  spec.json
benchmark/v0.2/world_09/: answer_key.json  data.npz  manifest.json  spec.json
benchmark/v0.2/world_10/: answer_key.json  data.npz  manifest.json  spec.json
benchmark/v0.2/world_11/: answer_key.json  data.npz  manifest.json  spec.json
benchmark/v0.5/: README.md  index.json
benchmark/v0.5/world_01/: answer_key.json  data.npz  manifest.json  spec.json
benchmark/v0.5/world_02/: answer_key.json  data.npz  manifest.json  spec.json
benchmark/v0.5/world_03/: answer_key.json  data.npz  manifest.json  spec.json
benchmark/v0.5/world_04/: answer_key.json  data.npz  manifest.json  spec.json
benchmark/v0.5/world_05/: answer_key.json  data.npz  manifest.json  spec.json
benchmark/v0.5/world_06/: answer_key.json  data.npz  manifest.json  spec.json
benchmark/v0.5/world_07/: answer_key.json  data.npz  manifest.json  spec.json
benchmark/v0.5/world_08/: answer_key.json  data.npz  manifest.json  spec.json
benchmark/v0.5/world_09/: answer_key.json  data.npz  manifest.json  spec.json
benchmark/v0.5/world_10/: answer_key.json  data.npz  manifest.json  spec.json
benchmark/v0.5/world_11/: answer_key.json  data.npz  manifest.json  spec.json
benchmark/v0.5/world_12/: answer_key.json  data.npz  manifest.json  spec.json
benchmark/v0.5/world_13/: answer_key.json  data.npz  manifest.json  spec.json
benchmark/v0.5/world_14/: answer_key.json  data.npz  manifest.json  spec.json
benchmark/v0.5/world_15/: answer_key.json  data.npz  manifest.json  spec.json
benchmark/v0.5/world_16/: answer_key.json  data.npz  manifest.json  spec.json
benchmark/v0.5/world_17/: answer_key.json  data.npz  manifest.json  spec.json
benchmark/v0.5/world_18/: answer_key.json  data.npz  manifest.json  spec.json
benchmark/v0.5/world_19/: answer_key.json  data.npz  manifest.json  spec.json
benchmark/v0.5/world_20/: answer_key.json  data.npz  manifest.json  spec.json
benchmark/v0.5/world_21/: answer_key.json  data.npz  manifest.json  spec.json
benchmark/v0.5/world_22/: answer_key.json  data.npz  manifest.json  spec.json
benchmark/v0.5/world_23/: answer_key.json  data.npz  manifest.json  spec.json
benchmark/v0.5/world_24/: answer_key.json  data.npz  manifest.json  spec.json
benchmark/v0.5/world_25/: answer_key.json  data.npz  manifest.json  spec.json
benchmark/v0.5/world_26/: answer_key.json  data.npz  manifest.json  spec.json
benchmark/v0.5/world_27/: answer_key.json  data.npz  manifest.json  spec.json
benchmark/v0.5/world_28/: answer_key.json  data.npz  manifest.json  spec.json
benchmark/v0.5/world_29/: answer_key.json  data.npz  manifest.json  (+1 more)
benchmark/v0.6/: index.json
benchmark/v0.7/: index.json
blog/: linkedin-launch.md  medium-launch.md  medium-tour.md  x-thread.md
blog/figures/: figures.md  make_figures.py  make_tour_figures.py
docs/: architecture.md  blog-the-decisive-experiment.md  engineering.md  findings.md  foundations.md  getting-started.md  hld.md  index.html  lld.md  scope.md  significance.md  validation.md
docs/figures/: render_world_dag.py
evals/: run_author_bakeoff.py
evals/author-model-bakeoff/: README.md  report.json
evals/baseline-crossover/: README.md  report.json  run_crossover.py
evals/name-only-baseline/: run.py
evals/nonlinear-crossover/: README.md  report.json  run.py
evals/scale/: generate_hardened.py  generate_set.py
evals/structural-difficulty/: README.md  report.json  run_analysis.py
evals/temporal-crossover/: README.md  report.json  run.py
evals/varsortability/: run.py
examples/: 01_grade_your_discoverer.py  02_inspect_a_bundle.py  02_visualize_a_world.py  03_author_a_world.py  03_benchmark_a_controller.py  04_inspect_a_bundle.py  05_author_a_world.py  06_nonlinear_world.py  README.md
paper/: README.md  preprint-draft.md  venues.md
spikes/: smoke_live.py  smoke_temporal.py  spike_author.py  spike_coffee.py  spike_coffee_general.py  spike_grader.py  spike_loop.py
src/causal_worlds/: __init__.py  _version.py  admission.py  anonymize.py  artifact.py  author.py  baselines.py  bench.py  brief.py  cli.py  config.py  container.py  control.py  controls.py  counterfactual.py  difficulty.py  elicit.py  errors.py  evaluation.py  fakes.py  from_edges.py  gates.py  generate.py  gym.py  judge.py  obs.py  protocols.py  schema.py  serde.py  temporal_baselines.py  viz.py  worlds.py
tests/: test_admission.py  test_anonymize.py  test_artifact.py  test_baselines.py  test_bench.py  test_brief.py  test_cli.py  test_control.py  test_control_baselines.py  test_control_identifiability.py  test_controls.py  test_counterfactual.py  test_difficulty.py  test_discover.py  test_elicit.py  test_evaluation.py  test_exports.py  test_from_edges.py  test_gates.py  test_generate.py  test_gym.py  test_llm_adapters.py  test_nonlinear.py  test_nonlinear_diverse.py  test_obs.py  test_sample.py  test_schema.py  test_serde.py  test_temporal.py  test_temporal_baselines.py  test_viz.py  test_worlds.py
(+190 files in other folders)
