[project]
name = "causal-worlds"
version = "0.0.1"
description = "Generate fictional-but-coherent causal operations worlds (executable sim + ground-truth answer-key) from a natural-language description, for benchmarking causal-discovery agents."
readme = "README.md"
requires-python = ">=3.13"
license = { text = "MIT" }
authors = [{ name = "Noumenal" }]
dependencies = [
    "typer>=0.12",
    "pydantic>=2.9", # boundary validation (CLI/config/LLM I/O); core stays on frozen dataclasses
    "numpy>=2.1",    # the functional core: SCM sampling + scoring
]

[project.optional-dependencies]
# The discovery/grader stack (heavy: scipy/sklearn). Installed when the `discover` feature is used.
discover = ["causal-learn>=0.1.4", "gies>=0.0.1"]
# LLM structured output (author + judge) with validation + bounded retry, provider-agnostic.
llm = ["instructor>=1.0", "google-genai>=1.0"]
# Observability/eval: Langfuse v3+ is OpenTelemetry-based.
observability = ["langfuse>=3.0"]

[project.scripts]
causal-worlds = "causal_worlds.cli:app"

[dependency-groups]
# uv dev group (PEP 735) — installed by `uv sync` by default.
dev = [
    "ruff>=0.8",
    "mypy>=1.13",
    "pytest>=8.3",
    "pytest-cov>=6.0",
    "pre-commit>=4.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/causal_worlds"]

# ----------------------------------------------------------------------------
# Ruff — single linter + formatter. select=ALL, opt out deliberately (kniru-style).
# ----------------------------------------------------------------------------
[tool.ruff]
line-length = 100
target-version = "py313"
# Research spikes are exploratory and NOT held to production lint (see docs/engineering.md §Research).
extend-exclude = ["spikes", "experiments"]

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "D203",   # one-blank-line-before-class — conflicts with D211
    "D213",   # multi-line-summary-second-line — conflicts with D212
    "COM812", # trailing comma — managed by the formatter
    "ISC001", # implicit str concat — managed by the formatter
    "CPY001", # no copyright header requirement
    "TRY003", # long messages outside the exception class — too pedantic for our error types
    "RET504", # assign-before-return — we return typed locals so mypy doesn't flag numpy Any-returns
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = [
    "S101",    # asserts are the point in tests
    "D",       # docstrings optional in tests
    "ANN",     # type annotations optional in tests
    "PLR2004", # magic values are fine in test assertions
    "INP001",  # tests need no __init__
]

[tool.ruff.lint.pydocstyle]
convention = "google"

# ----------------------------------------------------------------------------
# mypy — strict from day 1.
# ----------------------------------------------------------------------------
[tool.mypy]
python_version = "3.13"
strict = true
files = ["src"]
exclude = ["spikes/", "experiments/"]

# ----------------------------------------------------------------------------
# pytest + coverage — CI fails below the floor.
# ----------------------------------------------------------------------------
[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=causal_worlds --cov-report=term-missing --cov-fail-under=90 --strict-markers"

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "\\.\\.\\.",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
    "@(abc\\.)?abstractmethod",
]
