[project]
name = "causal-worlds"
dynamic = ["version"]
description = "Generate fictional-but-coherent causal operations worlds (executable sim + ground-truth answer-key) from a natural-language description, for benchmarking causal-discovery agents."
readme = "README.md"
requires-python = ">=3.13"
license = { text = "MIT" }
authors = [{ name = "Noumenal" }]
keywords = ["causal-discovery", "benchmark", "causality", "llm", "synthetic-data", "scm"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Typing :: Typed",
]

dependencies = [
    "typer>=0.12",
    "pydantic>=2.9",          # boundary validation (CLI/LLM I/O); core stays on frozen dataclasses
    "pydantic-settings>=2.5", # env/.env config loading at the boundary
    "numpy>=2.1",             # the functional core: SCM sampling + scoring
]

[project.urls]
Homepage = "https://github.com/noumenal-ai/causal-worlds"
Repository = "https://github.com/noumenal-ai/causal-worlds"
Changelog = "https://github.com/noumenal-ai/causal-worlds/blob/main/CHANGELOG.md"
Issues = "https://github.com/noumenal-ai/causal-worlds/issues"

[project.optional-dependencies]
# The discovery/grader stack (heavy: scipy/sklearn). Installed when the `discover` feature is used.
discover = ["causal-learn>=0.1.4", "gies>=0.0.1"]
# LLM structured output (author + judge) with validation + bounded retry, provider-agnostic.
# instructor wraps the provider SDKs; anthropic = Claude author, google-genai = Gemini judge.
# instructor[google-genai] pulls the genai SDK + jsonref (needed for Gemini structured output).
llm = ["instructor[google-genai]>=1.0", "anthropic>=0.40"]
# Observability/eval: Langfuse v3+ is OpenTelemetry-based.
observability = ["langfuse>=3.0"]

[project.scripts]
causal-worlds = "causal_worlds.cli:app"

[dependency-groups]
# uv dev group (PEP 735) — installed by `uv sync` by default.
dev = [
    "ruff>=0.8",
    "mypy>=1.13",
    "pytest>=8.3",
    "pytest-cov>=6.0",
    "pre-commit>=4.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.version]
path = "src/causal_worlds/_version.py"

[tool.hatch.build.targets.wheel]
packages = ["src/causal_worlds"]

# ----------------------------------------------------------------------------
# Ruff — single linter + formatter. select=ALL, opt out deliberately (kniru-style).
# ----------------------------------------------------------------------------
[tool.ruff]
line-length = 100
target-version = "py313"
# Research spikes + eval harnesses are exploratory, NOT held to production lint (docs/engineering.md
# §Research). Their *reports* (evals/*/report.json, README.md) are the shipped, reproducible evidence.
extend-exclude = ["spikes", "experiments", "evals", "examples"]

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "D203",   # one-blank-line-before-class — conflicts with D211
    "D213",   # multi-line-summary-second-line — conflicts with D212
    "COM812", # trailing comma — managed by the formatter
    "ISC001", # implicit str concat — managed by the formatter
    "CPY001", # no copyright header requirement
    "TRY003", # long messages outside the exception class — too pedantic for our error types
    "RET504", # assign-before-return — we return typed locals so mypy doesn't flag numpy Any-returns
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = [
    "S101",    # asserts are the point in tests
    "D",       # docstrings optional in tests
    "ANN",     # type annotations optional in tests
    "PLR2004", # magic values are fine in test assertions
    "INP001",  # tests need no __init__
]

[tool.ruff.lint.pydocstyle]
convention = "google"

# ----------------------------------------------------------------------------
# mypy — strict from day 1.
# ----------------------------------------------------------------------------
[tool.mypy]
python_version = "3.13"
strict = true
files = ["src"]
exclude = ["spikes/", "experiments/", "evals/", "examples/"]
plugins = ["pydantic.mypy"]

# Optional extras (LLM providers + the discovery stack); keyless CI typechecks src without them.
[[tool.mypy.overrides]]
module = ["instructor.*", "anthropic.*", "google.*", "causallearn.*", "gies.*"]
ignore_missing_imports = true

# ----------------------------------------------------------------------------
# pytest + coverage — CI fails below the floor.
# ----------------------------------------------------------------------------
[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=causal_worlds --cov-report=term-missing --cov-fail-under=90 --strict-markers"

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "\\.\\.\\.",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
    "@(abc\\.)?abstractmethod",
]
